--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -14,11 +14,12 @@
 
         <ImageView
             android:id="@+id/newsImage"
-            tools:src="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/sourceName"
@@ -34,20 +35,20 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toBottomOf="@id/sourceName"
-            android:layout_margin="8dp"
             tools:text="Alguém me disse" />
 
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toBottomOf="@id/description"
-            android:layout_margin="8dp"
             tools:text="Alguém me disse" />
 
 
