chore: improve styles

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/newsCard"
     style="@style/CardViewStyle"
+    android:layout_margin="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,8 +15,8 @@
 
         <ImageView
             android:id="@+id/newsImage"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="100dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +24,13 @@
 
         <TextView
             android:id="@+id/sourceName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textStyle="bold"
             android:layout_margin="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,10 +38,12 @@
 
         <TextView
             android:id="@+id/description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="8dp"
             android:textSize="16sp"
+            android:ellipsize="end"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toBottomOf="@id/sourceName"
             tools:text="Alguém me disse" />
