changes on layout and set placeholder on imageview

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -19,6 +19,7 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/sourceName"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/ic_launcher_background" />
 
@@ -43,10 +44,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="8dp"
             android:textSize="16sp"
+            android:maxLines="4"
             android:ellipsize="end"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toBottomOf="@id/sourceName"
-            tools:text="Alguém me disse" />
+            tools:text="@tools:sample/lorem/random" />
 
         <TextView
             android:id="@+id/author"
@@ -56,6 +58,7 @@
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/newsImage"
             app:layout_constraintTop_toBottomOf="@id/description"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="Alguém me disse" />
 
 
